--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: ruby
 rvm:
-  - "rbx"
   - "1.9.3"
   - "2.0.0"
 before_script:
   - psql -c 'create database pig_latin_test;' -U postgres
 script:
-  - RAILS_ENV=test bundle exec rake spec
+  - RAILS_ENV=test bundle exec rake test
