--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - "1.9.3"
   - "2.0.0"
 before_script:
+  - psql -c "create user pig_latin with password 'igpay_atinlay';" -U postgres
   - psql -c 'create database pig_latin_test;' -U pig_latin
 script:
   - RAILS_ENV=test bundle exec rake test
