--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - "1.9.3"
   - "2.0.0"
 before_script:
+  - psql "create user pig_latin with password 'igpay_atinlay' CREATEDB" -U postgres
   - RAILS_ENV=test bundle exec rake db:setup db:migrate
 script:
   - RAILS_ENV=test bundle exec rake test
